# bookstore

./: .dockerignore  .gitignore  README.md  db.sqlite3  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: models.py  serializers.py  urls.py  views.py  viewsets.py
api/migrations/: 0001_initial.py  0002_follow.py
bookstore/: settings.py  urls.py
bookstore/.github/workflows/: ci.yml
