[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    { name = "Luan Vieira", email = "luanvlw23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5,<6.0.0",
    "djangorestframework>=3.16.1,<4.0.0",
    "psycopg[binary]>=3.2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
factory-boy = "^3.3.3"

[tool.poetry]
package-mode = false
