[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Luan Vieira <luanvlw23@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
requires-python = ">=3.11"
django = "^5.2"
djangorestframework = "^3.16"
psycopg = {extras = ["binary"], version = "^3.2"}
gitpython = "^3.1.45"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
black = "^25.1"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
